--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
 <h3>
 <a id="authors-and-credits" class="anchor" href="#authors-and-credits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Credits</h3>
 
-<p>Sahid  Almas
-Apktool
-Java</p>
+<p>Author: Sahid  Almas
+</p><p>Credit: Python,Java and Apktool</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
